--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             href="mailTo:miguelnunes_1994@hotmail.com">miguelnunes_1994@hotmail.com</a></p>
 
                     <p><i class="fa fa-linkedin fa-fw w3-margin-right w3-large w3-text-teal"></i><a
-                            href="https://www.linkedin.com/in/miguel-nunes-959a5ab8/">https://www.linkedin.com/in/miguel-nunes-959a5ab8/</a>
+                            href="https://www.linkedin.com/in/miguelnns/">https://www.linkedin.com/in/miguelnns/</a>
                     </p>
 
                     <p><i class="fa fa-github fa-fw w3-margin-right w3-large w3-text-teal" aria-hidden="true"></i><a
@@ -226,6 +226,21 @@
         <div class="w3-third">
             <div class="w3-container w3-card-2 w3-white w3-margin-bottom work">
                 <div class="w3-container">
+                    <h5 class="w3-opacity"><b>App to teach handwriting in portuguese (Android, MSc Thesis)</b></h5>
+                    <p> During my master thesis, I had to develop an Android app to help children learn writing in
+                        portuguese. This app includes exercises (~300) to children in preschool education and first
+                        grade. It's also possible to evaluate exercises resolutions and produce sounds since some students can't
+                        read at the target ages.
+                    </p>
+                    <p>MSc Thesis @ <a href="https://www.inesctec.pt/">INESC TEC</a></p>
+                    <a href="https://sigarra.up.pt/feup/pt/ucurr_geral.ficha_uc_view?pv_ocorrencia_id=384983">
+                        <i class="fa fa-book fa-2x w3-hover-opacity" aria-hidden="true"></i>[DISS]</a>
+                </div>
+            </div>
+        </div>
+        <div class="w3-third">
+            <div class="w3-container w3-card-2 w3-white w3-margin-bottom work">
+                <div class="w3-container">
                     <h5 class="w3-opacity"><b>UNIVENTO (Ruby On Rails, HTML, CSS, JS, MySQL)</b></h5>
                     <p>Social network website where the user can search for academic events of all kind and where the
                         student's union can promote their own events.</p>
@@ -268,21 +283,6 @@
                             class="fa fa-github fa-2x w3-hover-opacity" aria-hidden="true"></i></a>
                     <a href="https://exploracafora.herokuapp.com/"><i class="fa fa-external-link fa-2x w3-hover-opacity"
                                                                       aria-hidden="true"></i></a>
-                </div>
-            </div>
-        </div>
-        <div class="w3-third">
-            <div class="w3-container w3-card-2 w3-white w3-margin-bottom work">
-                <div class="w3-container">
-                    <h5 class="w3-opacity"><b>App to teach handwriting in portuguese (Android, MSc Thesis)</b></h5>
-                    <p> During my master thesis, I had to develop an Android app to help children learn writing in
-                        portuguese. This app includes exercises (~300) to children in preschool education and first
-                        grade. It's also possible to evaluate exercises resolutions and produce sounds since some students can't
-                        read at the target ages.
-                    </p>
-                    <p>MSc Thesis @ <a href="https://www.inesctec.pt/">INESC TEC</a></p>
-                    <a href="https://sigarra.up.pt/feup/pt/ucurr_geral.ficha_uc_view?pv_ocorrencia_id=384983">
-                        <i class="fa fa-book fa-2x w3-hover-opacity" aria-hidden="true"></i>[DISS]</a>
                 </div>
             </div>
         </div>
@@ -380,7 +380,7 @@
 
 <footer class="w3-container w3-teal w3-center w3-margin-top">
     <p>Where am I?</p>
-    <a href="https://www.linkedin.com/in/miguel-nunes-959a5ab8/"><i
+    <a href="https://www.linkedin.com/in/miguelnns/"><i
             class="fa fa-linkedin fa-3x w3-hover-opacity"></i></a>
     <a href="https://github.com/miguelnunes94"><i class="fa fa-github fa-3x w3-hover-opacity"
                                                   aria-hidden="true"></i></a>
