--- a/index.html
+++ b/index.html
@@ -168,9 +168,8 @@
             <div class="w3-container">
                 <h5 class="w3-opacity"><b>Background</b></h5>
                 <p>
-                    Hi, my name is Miguel Nunes and I'm 23 years old. I'm an Informatics and Computing Engineering
-                    student
-                    at FEUP and currently doing my MSc Thesis.
+                    Hi, my name is Miguel Nunes and I'm 23 years old. I have a master's degree in Informatics and Computing Engineering
+                    by FEUP.
                 </p>
 
                 <p>
