--- a/index.html
+++ b/index.html
@@ -199,8 +199,7 @@
         <div class="w3-container w3-card-2 w3-white w3-margin-bottom w3-rest">
             <div class="w3-container">
                 <h5 class="w3-opacity"><b>Faculdade de Engenharia da Universidade do Porto</b></h5>
-                <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2012 - <span
-                        class="w3-tag w3-teal w3-round">2017</span></h6>
+                <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2012 - 2017</span></h6>
                 <a href="https://sigarra.up.pt/feup/pt/cur_geral.cur_view?pv_curso_id=742">
                     <i class="fa fa-book  w3-hover-opacity" aria-hidden="true"></i> Integrated Master in
                     Informatics and Computing Engineering (3+2 years)</a>
