--- a/index.html
+++ b/index.html
@@ -194,6 +194,24 @@
 
         <div class="w3-container w3-card-2 w3-white w3-margin-bottom w3-rest">
             <h2 class="w3-text-grey w3-padding-16"><i
+                    class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
+        </div>
+        <div class="w3-container w3-card-2 w3-white w3-margin-bottom w3-rest">
+            <div class="w3-container">
+                <h5 class="w3-opacity"><b>Critical Manufacturing</b></h5>
+                <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jully 2017 - <span
+                        class="w3-tag w3-teal w3-round">Current</span></h6>
+                <p>Full stack applications to semiconductor manufacturers.</p>
+                <ul>
+                    <li>C#</li>
+                    <li>Oracle SQL / PL-SQL</li>
+                    <li>Scrum</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="w3-container w3-card-2 w3-white w3-margin-bottom w3-rest">
+            <h2 class="w3-text-grey w3-padding-16"><i
                     class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
         </div>
         <div class="w3-container w3-card-2 w3-white w3-margin-bottom w3-rest">
@@ -201,8 +219,8 @@
                 <h5 class="w3-opacity"><b>Faculdade de Engenharia da Universidade do Porto</b></h5>
                 <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2012 - 2017</span></h6>
                 <a href="https://sigarra.up.pt/feup/pt/cur_geral.cur_view?pv_curso_id=742">
-                    <i class="fa fa-book  w3-hover-opacity" aria-hidden="true"></i> Integrated Master in
-                    Informatics and Computing Engineering (3+2 years)</a>
+                   <p><i class="fa fa-book  w3-hover-opacity" aria-hidden="true"></i> Integrated Master in
+                    Informatics and Computing Engineering (3+2 years)</a></p>
                 <p> Grade: 17 out of 20</p>
             </div>
         </div>
